[gd_scene load_steps=28 format=3 uid="uid://dq1tfxqw4xg81"]

[ext_resource type="Texture2D" uid="uid://d3d5vrmxlcgvn" path="res://FlipPanel/select_panel.png" id="1_g20kd"]
[ext_resource type="Script" path="res://FlipPanel/flip_panel.gd" id="1_kmvdr"]
[ext_resource type="Shader" path="res://FlipPanel/perspective.gdshader" id="2_381jg"]
[ext_resource type="Texture2D" uid="uid://ciytv66d5b2im" path="res://FlipPanel/select2_panel.png" id="3_rll3t"]
[ext_resource type="Shader" path="res://FlipPanel/flame_edge.gdshader" id="5_iysue"]
[ext_resource type="Shader" path="res://FlipPanel/flow_light.gdshader" id="6_aofuk"]
[ext_resource type="Shader" path="res://FlipPanel/dissolve.gdshader" id="7_li8rh"]
[ext_resource type="Texture2D" uid="uid://20tvy75kbkde" path="res://FlipPanel/t_fx_smoke.TGA" id="8_bclyr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wn68r"]
bg_color = Color(0, 0, 0, 0.611765)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="LabelSettings" id="LabelSettings_q55oa"]
font_size = 46
outline_size = 25
outline_color = Color(0.179064, 0.175354, 0.265625, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_h8iy3"]
resource_local_to_scene = true
shader = ExtResource("2_381jg")
shader_parameter/fov = 8.979
shader_parameter/cull_back = true
shader_parameter/y_rot = 0.0
shader_parameter/x_rot = 0.0
shader_parameter/inset = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3jq22"]
resource_local_to_scene = true
shader = ExtResource("2_381jg")
shader_parameter/fov = 8.979
shader_parameter/cull_back = true
shader_parameter/y_rot = 180.0
shader_parameter/x_rot = 0.0
shader_parameter/inset = 0.0

[sub_resource type="ViewportTexture" id="ViewportTexture_arora"]
viewport_path = NodePath("SubViewport")

[sub_resource type="Animation" id="Animation_5j44k"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:y_rot")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(180, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:size:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(521, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel:size:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(728, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Panel:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-19, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Panel:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("FlowLight:material:shader_parameter/progress")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Behind:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Front:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("TextureRect:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("TextureRect2:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/10/type = "bezier"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("TextureRect:material:shader_parameter/progress")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/11/type = "bezier"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("TextureRect2:material:shader_parameter/edge_color:r")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/12/type = "bezier"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("TextureRect2:material:shader_parameter/edge_color:g")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0.703125, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/13/type = "bezier"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("TextureRect2:material:shader_parameter/edge_color:b")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/14/type = "bezier"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("TextureRect2:material:shader_parameter/edge_color:a")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/15/type = "bezier"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("Panel:modulate:r")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/16/type = "bezier"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("Panel:modulate:g")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/17/type = "bezier"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("Panel:modulate:b")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/18/type = "bezier"
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/path = NodePath("Panel:modulate:a")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/19/type = "bezier"
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/path = NodePath("TextureRect2:modulate:r")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/20/type = "bezier"
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/path = NodePath("TextureRect2:modulate:g")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/21/type = "bezier"
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/path = NodePath("TextureRect2:modulate:b")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/22/type = "bezier"
tracks/22/imported = false
tracks/22/enabled = true
tracks/22/path = NodePath("TextureRect2:modulate:a")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_8c2hm"]
resource_name = "burning_anim"
length = 1.5
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Behind:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Front:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("TextureRect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("TextureRect2:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("TextureRect:material:shader_parameter/progress")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1.382, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("TextureRect2:material:shader_parameter/edge_color:r")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.5)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("TextureRect2:material:shader_parameter/edge_color:g")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0.703125, -0.25, 0, 0.25, 0, 0.701961, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.5)
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("TextureRect2:material:shader_parameter/edge_color:b")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.5)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("TextureRect2:material:shader_parameter/edge_color:a")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.5)
}
tracks/9/type = "bezier"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Panel:modulate:r")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.5)
}
tracks/10/type = "bezier"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Panel:modulate:g")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.5)
}
tracks/11/type = "bezier"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Panel:modulate:b")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.5)
}
tracks/12/type = "bezier"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Panel:modulate:a")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.5)
}
tracks/13/type = "bezier"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("TextureRect2:modulate:r")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.5)
}
tracks/14/type = "bezier"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("TextureRect2:modulate:g")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.5)
}
tracks/15/type = "bezier"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("TextureRect2:modulate:b")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.5)
}
tracks/16/type = "bezier"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("TextureRect2:modulate:a")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1.5)
}

[sub_resource type="Animation" id="Animation_7jix7"]
resource_name = "flip_anim"
length = 2.0
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:y_rot")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(180, -0.25, 0, 0.2, -182, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 1)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Panel:size:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(521, -0.25, 0, 0.0323028, -77.6602, 2, -0.0532177, 0, 0.11046, 255.262, 496.505, -0.109052, -102.532, 0.0323028, -77.6602),
"times": PackedFloat32Array(0, 0.159653, 0.431174)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Panel:size:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(728, -0.25, 0, 0.25, 0, 728, -0.25, 0, 0.25, 0, 728, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.159653, 1)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Panel:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(-19, -0.25, 0, 0.0389632, 56.0074, 244, -0.0438902, -36.1051, 0.103749, -263.955, -12.36, -0.115763, 34.1775, 0.0389632, 56.0074),
"times": PackedFloat32Array(0, 0.159653, 0.444596)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Panel:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.159653, 1)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("FlowLight:material:shader_parameter/progress")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(1, 2)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_431m6"]
_data = {
"RESET": SubResource("Animation_5j44k"),
"burning_anim": SubResource("Animation_8c2hm"),
"flip_anim": SubResource("Animation_7jix7")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2skfq"]
resource_local_to_scene = true
shader = ExtResource("6_aofuk")
shader_parameter/progress = -1.0
shader_parameter/angle = 2.206
shader_parameter/n = 0.163

[sub_resource type="Gradient" id="Gradient_yvwfo"]
offsets = PackedFloat32Array(0, 0.996241)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_11s22"]
gradient = SubResource("Gradient_yvwfo")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3cnxs"]
shader = ExtResource("7_li8rh")
shader_parameter/progress = 0.0
shader_parameter/edge_color = Color(1, 0.820313, 0, 1)
shader_parameter/angle = 1.57
shader_parameter/noise = ExtResource("8_bclyr")

[sub_resource type="ViewportTexture" id="ViewportTexture_rnbxw"]
viewport_path = NodePath("SubViewport")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_5fogp"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_ofkek"]
noise = SubResource("FastNoiseLite_5fogp")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_yx1h2"]
shader = ExtResource("5_iysue")
shader_parameter/noise_speed = 1.0
shader_parameter/noise_size = 1.0
shader_parameter/edge_color = Color(1, 0.703125, 0, 1)
shader_parameter/noise_texture = SubResource("NoiseTexture2D_ofkek")

[sub_resource type="Gradient" id="Gradient_ihi77"]
offsets = PackedFloat32Array(0.996198, 1)
colors = PackedColorArray(1, 0.701961, 0, 0, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_6um2y"]
gradient = SubResource("Gradient_ihi77")
fill_from = Vector2(0.5, 0)
fill_to = Vector2(0.5, 1)

[node name="FlipPanel" type="Control"]
auto_translate_mode = 1
custom_minimum_size = Vector2(500, 700)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -652.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kmvdr")
y_rot = 180.0

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
offset_left = -19.0
offset_right = 502.0
offset_bottom = 728.0
theme_override_styles/panel = SubResource("StyleBoxFlat_wn68r")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(500, 700)
render_target_update_mode = 4

[node name="Ui8" type="TextureRect" parent="SubViewport"]
auto_translate_mode = 1
offset_right = 500.0
offset_bottom = 700.0
texture = ExtResource("1_g20kd")

[node name="Label" type="Label" parent="SubViewport/Ui8"]
auto_translate_mode = 1
layout_mode = 0
offset_right = 470.0
offset_bottom = 103.0
theme_override_font_sizes/font_size = 56
text = "羽毛飞刀"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="SubViewport/Ui8"]
auto_translate_mode = 1
layout_mode = 0
offset_left = 38.0
offset_top = 155.0
offset_right = 460.0
offset_bottom = 676.0
text = "当你握住这把羽毛飞刀，仿佛触摸到了轻盈的自由和无拘束的灵动。这不仅仅是一把武器，更是一种艺术，一种与空气舞蹈的精妙交错。"
label_settings = SubResource("LabelSettings_q55oa")
vertical_alignment = 1
autowrap_mode = 1

[node name="Behind" type="TextureRect" parent="."]
auto_translate_mode = 1
material = SubResource("ShaderMaterial_h8iy3")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_rll3t")

[node name="Front" type="TextureRect" parent="."]
auto_translate_mode = 1
material = SubResource("ShaderMaterial_3jq22")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_arora")
metadata/_edit_lock_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_431m6")
}

[node name="FlowLight" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_2skfq")
layout_mode = 0
offset_left = -3.0
offset_top = -4.0
offset_right = 501.0
offset_bottom = 705.0
mouse_filter = 2
texture = SubResource("GradientTexture2D_11s22")

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_3cnxs")
layout_mode = 0
offset_right = 500.0
offset_bottom = 700.0
texture = SubResource("ViewportTexture_rnbxw")

[node name="TextureRect2" type="TextureRect" parent="."]
visible = false
material = SubResource("ShaderMaterial_yx1h2")
layout_mode = 1
offset_right = 500.0
offset_bottom = 700.0
texture = SubResource("GradientTexture2D_6um2y")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="button_down" from="TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
